fix(wish): add relation offers.user for Get by id
